--- a/index.html
+++ b/index.html
@@ -1,60 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="index.css" />
-    <title>My Blog</title>
-    <header>
-        <div class="list__header">
-            <div class="header__headertitle">
-                <h1>Welcome to My Blog</h1>
-                <ul class="list__item">
-                    <li class="list__1item"><a href="">Home</a></li>
-                    <li class="list__2item"><a href="">Categories</a></li>
-                    <li class="list__3item"><a href="">About</a></li>
-                    <li class="list__4item"><a href="">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </header>
+    <title>Document</title>
 </head>
-
 <body>
-    <div class="list__bottom">
-        <div class="list__left">
-            <div class="left__post1">
-                <h3 class="list__titlebottom">Post Title 1</h3>
-                <p class="list__comments">Published on September 12, 2023 by John Dos</p>
-                <p>This is the content of the blog post...</p>
-                <p>More content goes here</p>
-            </div>
-            <div class="left__post2">
-                <h3 class="list__titlebottom">Post Title 2</h3>
-                <p class="comments">Published on September 10, 2023 by Jane Smith</p>
-                <p>This is another blog post</p>
-                <p>More content goes here</p>
-            </div>
-        </div>
-        <div class="right">
-            <div class="postr">
-                <h3 class="titlebot1">Recent Posts</h3>
-                <p>Post title 1</p>
-                <p>Post title 2</p>
-                <p>Post title 3</p>
-            </div>
-            <div class="cat">
-                <h3 class="titlebot2">Categories</h3>
-                <p>Category 1</p>
-                <p>Category 2</p>
-                <p>Category 3</p>
-            </div>
-        </div>
-    </div>
-</body>
-<footer>
-    &copy; Copyright 2023 - All Rights Reserved
+    
+<header class="welcome">
+    <h1>Welcome to my blog</h1>
+    <nav class="top_nav">
+        <ul>
+            <li><a href="#">Home</a> </li>
+            <li><a href="#">Categories</a> </li>
+            <li><a href="#">About</a> </li>
+            <li><a href="#">Contact</a> </li>
+        </ul>
+    </nav>
+</header>
+<main class="main_content">
+    <section>
+        <article>
+            <h2>Post Title 1</h2>
+            <p>Published on September 12, 2023 by John Dos</p>
+            <p>This is the content of the blog post...</p>
+            <p>More content goes here</p>
+        </article>
+        <article>
+            <h2>Post Title 2</h2>
+            <p>Published on September 10, 2023 by Jane Smith</p>
+            <p>This is another blog post</p>
+            <p>More content goes here</p>
+        </article>
+    </section>
+    <aside>
+        <section>
+            <h2>Recent Posts</h2>
+            <li>
+                <ul><a href="#">Post title 1</a></ul>
+                <ul><a href="#">Post title 2</a></ul>
+                <ul><a href="#">Post title 3</a></ul>
+            </li>
+        </section>
+        <section>
+            <h2>Categories</h2>
+            <li>
+                <ul><a href="#">Category 1</a></ul>
+                <ul><a href="#">Category 2</a></ul>
+                <ul><a href="#">Category 3</a></ul>
+            </li>
+        </section>
+    
+    </aside>
+</main>
+<footer class="footer"> 
+    &copy; 2023 Myblog. All rights reserved
 </footer>
-
+</body>
 </html>
