--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Document</title>
 </head>
-<body>
-    
-<header class="welcome">
-    <h1>Welcome to my blog</h1>
-    <nav class="top_nav">
-        <ul>
+<body class="wrapper">
+<header class="header-top">
+    <h1 class="header-top__heading">Welcome to my blog</h1>
+    <nav class="header-top__nav">
+        <ul class="nav-list">
             <li><a href="#">Home</a> </li>
             <li><a href="#">Categories</a> </li>
             <li><a href="#">About</a> </li>
@@ -18,16 +18,16 @@
         </ul>
     </nav>
 </header>
-<main class="main_content">
+<main class="main-content">
     <section>
         <article>
-            <h2>Post Title 1</h2>
+            <h2 class="main-content__heading">Post Title 1</h2>
             <p>Published on September 12, 2023 by John Dos</p>
             <p>This is the content of the blog post...</p>
             <p>More content goes here</p>
         </article>
         <article>
-            <h2>Post Title 2</h2>
+            <h2 class="main-content__heading">Post Title 2</h2>
             <p>Published on September 10, 2023 by Jane Smith</p>
             <p>This is another blog post</p>
             <p>More content goes here</p>
