--- a/index.html
+++ b/index.html
@@ -19,36 +19,36 @@
     </nav>
 </header>
 <main class="main-content">
-    <section>
+    <section class="main-section">
         <article>
             <h2 class="main-content__heading">Post Title 1</h2>
-            <p>Published on September 12, 2023 by John Dos</p>
-            <p>This is the content of the blog post...</p>
-            <p>More content goes here</p>
+            <p class="main-content__published">Published on September 12, 2023 by John Dos</p>
+            <p class="main-content__txt">This is the content of the blog post...</p>
+            <p class="main-content__txt">More content goes here</p>
         </article>
         <article>
             <h2 class="main-content__heading">Post Title 2</h2>
-            <p>Published on September 10, 2023 by Jane Smith</p>
-            <p>This is another blog post</p>
-            <p>More content goes here</p>
+            <p class="main-content__published">Published on September 10, 2023 by Jane Smith</p>
+            <p class="main-content__txt">This is another blog post</p>
+            <p class="main-content__txt spacing">More content goes here</p>
         </article>
     </section>
-    <aside>
-        <section>
-            <h2>Recent Posts</h2>
-            <li>
-                <ul><a href="#">Post title 1</a></ul>
-                <ul><a href="#">Post title 2</a></ul>
-                <ul><a href="#">Post title 3</a></ul>
-            </li>
+    <aside class="main-aside">
+        <section class="main-aside__sec">
+            <h2 class="main-aside__heading">Recent Posts</h2>
+            <ul class="nav-list">
+                <li class="nav-list__text"><a href="#">Post title 1</a></li>
+                <li class="nav-list__text"><a href="#">Post title 2</a></li>
+                <li class="nav-list__text"><a href="#">Post title 3</a></li>
+            </ul>
         </section>
-        <section>
-            <h2>Categories</h2>
-            <li>
-                <ul><a href="#">Category 1</a></ul>
-                <ul><a href="#">Category 2</a></ul>
-                <ul><a href="#">Category 3</a></ul>
-            </li>
+        <section class="main-aside__sec">
+            <h2 class="main-aside__heading">Categories</h2>
+            <ul class="nav-list">
+                <li class="nav-list__text"><a href="#">Category 1</a></li>
+                <li class="nav-list__text"><a href="#">Category 2</a></li>
+                <li class="nav-list__text"><a href="#">Category 3</a></li>
+            </ul>
         </section>
     
     </aside>
